--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@color/white"
+    >
 
     <ImageView
         android:layout_width="50dp"
@@ -11,23 +13,59 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
         android:background="#ff0092ff"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="username"
-        android:id="@+id/tvUsername"
+    <!-- First Line - name, screen name, relative time-->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:id="@+id/rlUsername"
+        android:layout_toRightOf="@+id/ivProfileImage"
+        android:layout_toEndOf="@+id/ivProfileImage"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        >
+        <!-- name -->
+        <!-- <com.codepath.apps.simpletwitterclient.customviews.RobotoTextView -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tweet_name"
+            android:id="@+id/tvName"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
+            android:textSize="14sp"
+            android:textStyle="bold"
+             />
 
+        <!-- screenname -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tweet_screenname"
+            android:id="@+id/tvUsername"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/tvName"
+            android:layout_toEndOf="@+id/tvName"
+            android:textSize="12sp"
+             />
+
+        </RelativeLayout>
+
+
+
+    <!-- BODY -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Body"
+        android:text="@string/tweet_body"
         android:id="@+id/tvBody"
-        android:layout_alignBottom="@+id/ivProfileImage"
-        android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:textSize="14sp"
+        android:layout_below="@+id/rlUsername"
+        android:layout_alignLeft="@+id/rlUsername"
+        android:layout_alignStart="@+id/rlUsername" />
 </RelativeLayout>
