Add Relative timestamp for each tweet.

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -54,6 +54,16 @@
             android:textSize="12sp"
              />
 
+        <!-- Created At -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvCreatedAt"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:textSize="12sp"
+            />
+
         </RelativeLayout>
 
 
