--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -6,7 +6,54 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.codepath.apps.simpletwitterclient.activities.ComposeActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/ivComposeUser"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="@string/compose_image_description"
+        android:background="@color/twitter_blue" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/compose_name"
+        android:id="@+id/tvComposeName"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/ivComposeUser"
+        android:layout_toEndOf="@+id/ivComposeUser" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/compose_screenname"
+        android:id="@+id/tvComposeScreenName"
+        android:textSize="12sp"
+        android:layout_below="@+id/tvComposeName"
+        android:layout_toRightOf="@+id/ivComposeUser"
+        android:layout_toEndOf="@+id/ivComposeUser" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/etCompose"
+        android:layout_below="@+id/ivComposeUser"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:inputType="text"
+        android:hint="@string/compose_hint"
+        android:gravity="top"
+        android:layout_marginTop="10dp"
+        />
 
 </RelativeLayout>
