Implement composing a tweet.
If a tweet is successfully created, a message is sent back to the
calling TimelineActivity to pull down new tweets.

Added a debugging library for easier logging.

--- a/app/src/main/res/menu/menu_compose.xml
+++ b/app/src/main/res/menu/menu_compose.xml
@@ -9,6 +9,7 @@
         android:title="@string/menu_send_tweet"
         android:icon="@drawable/ic_check"
         app:showAsAction="always"
+        android:onClick="actionSendTweet"
         />
 
 
