--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -50,9 +50,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:hint="@string/compose_hint"
         android:gravity="top"
+        android:background="@null"
         android:layout_marginTop="10dp"
         />
 
