--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="10dp"
     android:background="@color/white"
     >
 
@@ -11,10 +10,12 @@
         android:id="@+id/ivProfileImage"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
+        android:layout_alignParentStart="true"
         android:background="#ff0092ff"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         />
 
     <!-- First Line - name, screen name, relative time-->
@@ -27,6 +28,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         >
         <!-- name -->
         <!-- <com.codepath.apps.simpletwitterclient.customviews.RobotoTextView -->
@@ -61,12 +64,11 @@
             android:id="@+id/tvCreatedAt"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:textSize="12sp"
             />
 
         </RelativeLayout>
-
-
 
     <!-- BODY -->
     <TextView
@@ -78,4 +80,21 @@
         android:layout_below="@+id/rlUsername"
         android:layout_alignLeft="@+id/rlUsername"
         android:layout_alignStart="@+id/rlUsername" />
+
+    <!-- Media (Optional) -->
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="175dp"
+        android:id="@+id/ivMediaImage"
+        android:layout_below="@+id/tvBody"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/grill"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_alignLeft="@id/rlUsername"
+        android:layout_alignStart="@id/rlUsername"
+        android:layout_alignRight="@id/rlUsername"
+        android:layout_alignEnd="@id/rlUsername"
+        android:contentDescription="@string/tweet_media_description"
+        />
 </RelativeLayout>
