--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -55,6 +55,7 @@
         android:gravity="top"
         android:background="@null"
         android:layout_marginTop="10dp"
+        android:maxLength="140"
         />
 
 </RelativeLayout>
