disable sending tweets if tweet length is 0

--- a/app/src/main/res/menu/menu_compose.xml
+++ b/app/src/main/res/menu/menu_compose.xml
@@ -9,7 +9,7 @@
         android:title="@string/char_count"
         app:showAsAction="always"
         android:textSize="15sp"
-
+        android:enabled="false"
         />
 
     <item
